Dibuat menggunakan Colaboratory

--- a/JobsheetPyspark.ipynb
+++ b/JobsheetPyspark.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "JobsheetPyspark.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLUIW8KGpW7JRvRNxHbGx0",
+      "authorship_tag": "ABX9TyOONgzvTaCfTxFhegDEN83d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -384,7 +384,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Tampilkan data buku dengan harga paling murah!"
+        "Tampilkan data buku dengan harga paling murah!\n",
+        "\n"
       ],
       "metadata": {
         "id": "Gv8iw6T30Eyd"
@@ -429,7 +430,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Tampilkan jumlah terbit buku dikategorikan setiap tahun ditulis!\n"
+        "2.   Tampilkan jumlah terbit buku dikategorikan setiap tahun ditulis!\n",
+        "\n"
       ],
       "metadata": {
         "id": "pUYVPu0O08Uz"
@@ -481,7 +483,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Tampilkan data buku termahal tiap tahun penulisannya!"
+        "Tampilkan data buku termahal tiap tahun penulisannya!"
       ],
       "metadata": {
         "id": "5g5wCOhc1OtS"
@@ -532,7 +534,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Tampilkan data buku termurah tiap tahun penulisannya!"
+        "Tampilkan data buku termurah tiap tahun penulisannya!"
       ],
       "metadata": {
         "id": "WH2zzexk1XuT"
