--- a/JobsheetPyspark.ipynb
+++ b/JobsheetPyspark.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "JobsheetPyspark.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOONgzvTaCfTxFhegDEN83d",
+      "authorship_tag": "ABX9TyOArDVxXq8fU29boi3IbiUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -384,7 +384,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tampilkan data buku dengan harga paling murah!\n",
+        "* Tampilkan data buku dengan harga paling murah!\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -430,7 +432,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2.   Tampilkan jumlah terbit buku dikategorikan setiap tahun ditulis!\n",
+        "* Tampilkan jumlah terbit buku dikategorikan setiap tahun ditulis!\n",
         "\n"
       ],
       "metadata": {
@@ -483,7 +485,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tampilkan data buku termahal tiap tahun penulisannya!"
+        "* Tampilkan data buku termahal tiap tahun penulisannya!"
       ],
       "metadata": {
         "id": "5g5wCOhc1OtS"
@@ -534,7 +536,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tampilkan data buku termurah tiap tahun penulisannya!"
+        "* Tampilkan data buku termurah tiap tahun penulisannya!"
       ],
       "metadata": {
         "id": "WH2zzexk1XuT"
